# PortScan-haskell

./: CheckOpen.hs  HostPortStatus.hs  Main.hs  Makefile  port-scan.cabal
src/: CheckOpen.hs  Flags.hs  HostPortStatus.hs  Main.hs  Makefile  Verbosity.hs
